--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -8,27 +8,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <title>Inicio</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
-            <div>
-                <a href="../templates/index.html"><img class="logo-navbar" src="../img/logo-logo.png" alt=""></a>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+                <a href="#"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav menu">
+                        <li class="nav-item">
+                            <a class="nav-link active"href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i class="bi bi-person"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <ul class="menu">
-                <li><a class="menu__item" href="../templates/index.html">Inicio</a></li>
-                <li><a class="menu__item" href="../templates/servicios.html">Servicios</a></li>
-                <li><a class="menu__item" href="../templates/nosotros.html">Nosotros</a></li>
-                <li><a class="menu__item" href="../templates/contacto.html">Contacto</a></li>
-            </ul>
-            <ul>
-                <li><a class="menu__item" href="../templates/login.html">Iniciar Sesión <i
-                            class="bi bi-arrow-right-square"></i></a>
-                </li>
-            </ul>
         </nav>
     </header>
     <div class="titulo">
@@ -50,15 +65,18 @@
 
     <footer>
         <div>
-            <img class="footer-logo" src="../img/logo-logo.png" alt="">
+            <img class="footer-logo" src="../img/logo-logo.svg" alt="logo">
             <p>Logo ©2023 - Todos los derechos reservados</p>
         </div>
-        <div">
+        <div>
             <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-twitter"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-instagram"></i></a>
-            </div>
-    </footer>
+        </div>  
+</footer>
+
+    <!--Scripts Bootstrap-->
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
 </body>
 
