--- a/templates/login.html
+++ b/templates/login.html
@@ -8,58 +8,81 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <title>Inicio</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
-            <div>
-                <a href="../templates/index.html"><img class="logo-navbar" src="../img/logo-logo.png" alt=""></a>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+                <a href="#"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav menu">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i
+                                    class="bi bi-person"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <ul class="menu">
-                <li><a class="menu__item" href="../templates/index.html">Inicio</a></li>
-                <li><a class="menu__item" href="../templates/servicios.html">Servicios</a></li>
-                <li><a class="menu__item" href="../templates/nosotros.html">Nosotros</a></li>
-                <li><a class="menu__item" href="../templates/contacto.html">Contacto</a></li>
-            </ul>
-            <ul>
-                <li><a class="menu__item" href="../templates/login.html">Iniciar Sesión <i
-                            class="bi bi-arrow-right-square"></i></a>
-                </li>
-            </ul>
         </nav>
     </header>
 
-        <div class="titulo">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-            <h3>Lorem ipsum dolor sit amet <br/> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-        </div>
+    <div class="titulo">
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+        <h3>Lorem ipsum dolor sit amet <br /> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+    </div>
 
     <main class="centrar">
-            <div class="login-box centrar">
-                <div class="formulario">
-                    <input class="form-style-login" placeholder="Correo" type="email">
-                    <input class="form-style-login" type="password" placeholder="Contraseña">
-                    <button class="boton-enviar"><a href="">Registrarse</a></button>
-                    <button class="boton-enviar"><a href="">Iniciar Sesión</a></button>
-                </div>
+        <form>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+
         </div>
     </main>
     <footer>
         <div>
-            <img class="footer-logo" src="../img/logo-logo.png" alt="">
+            <img class="footer-logo" src="../img/logo-logo.svg" alt="logo">
             <p>Logo ©2023 - Todos los derechos reservados</p>
         </div>
-        <div">
+        <div>
             <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-twitter"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-instagram"></i></a>
-            </div>
+        </div>
     </footer>
+
+    <!--Scripts Bootstrap-->
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
