--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -8,42 +8,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <title>Inicio</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
-            <div>
-                <a href="../templates/index.html"><img class="logo-navbar" src="../img/logo-logo.png" alt=""></a>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+                <a href="#"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav menu">
+                        <li class="nav-item">
+                            <a class="nav-link active"href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i class="bi bi-person"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <ul class="menu">
-                <li><a class="menu__item" href="../templates/index.html">Inicio</a></li>
-                <li><a class="menu__item" href="../templates/servicios.html">Servicios</a></li>
-                <li><a class="menu__item" href="../templates/nosotros.html">Nosotros</a></li>
-                <li><a class="menu__item" href="../templates/contacto.html">Contacto</a></li>
-            </ul>
-            <ul>
-                <li><a class="menu__item" href="../templates/login.html">Iniciar Sesión <i
-                            class="bi bi-arrow-right-square"></i></a>
-                </li>
-            </ul>
         </nav>
     </header>
-    <div class="titulo">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-        <h3>Lorem ipsum dolor sit amet <br /> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-    </div>
-
-    <main>
+    <main class="container">
+        <div class="titulo">
+            <h1>Conexión para tu hogar</h1>
+            <h3>Contratá el plan que mejor se adapte a tus necesidades</h3>
+        </div>
         <div class="cards__servicios">
             <div class="card__servicios">
-                <img class="card__servicios__imagen" src="../img/servicios/servicios.jpg" alt="">
-                <h3 class="card__servicios__titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <p class="card__servicios__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti,
-                    quisquam! Molestiae consequatur maxime consequuntur in adipisci voluptatem, fugit, asperiores magnam
-                    illum voluptatibus, excepturi itaque ut delectus quod esse possimus dolores?</p>
+                <h3 class="card__servicios__titulo"><strong>Internet</strong></h3>
+                <h2 class="card__servicios__subtitulo ">50Mb SIMÉTRICOS</h2>
                 <button class="card__servicios__boton">Ver más</button>
 
             </div>
@@ -66,17 +77,21 @@
                 <button class="card__servicios__boton">Ver más</button>
             </div>
         </div>
+        </main>
         <footer>
             <div>
-                <img class="footer-logo" src="../img/logo-logo.png" alt="">
+                <img class="footer-logo" src="../img/logo-logo.svg" alt="logo">
                 <p>Logo ©2023 - Todos los derechos reservados</p>
             </div>
-            <div">
+            <div>
                 <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
                 <a href="" class="footer-redes"><i class="bi bi-twitter"></i></a>
                 <a href="" class="footer-redes"><i class="bi bi-instagram"></i></a>
-                </div>
-        </footer>
+            </div>  
+    </footer>
+
+        <!--Scripts Bootstrap-->
+         <script src="./js/bootstrap.bundle.min.js"></script>
 
 </body>
 
