--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-shadow navbar-dark">
             <div class="container-fluid">
                 <a href="#"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -36,7 +37,7 @@
                             <a class="nav-link" href="../templates/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../templates/contacto.html">Contacto</a>
+                            <a class="nav-link" href="../templates/ayuda.html">Ayuda</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i class="bi bi-person"></i></a>
@@ -49,14 +50,15 @@
 
     <main class="container">
         <div class="titulo">
-            <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  </h1>
-            <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, doloribus earum! Quibusdam possimus sint blanditiis soluta quia commodi sed, ducimus, aperiam sunt sequi qui recusandae libero voluptates provident earum eum.</h3>
+            <h1>Un equipo de profesionales para una empresa profesional</h1>
+            <h3>Nuestra Familia</h3>
         </div>
         <div class="cards__nosotros">
             <div class="card__nosotros">
                 <div class="card__content">
                     <img class="card__nosotros__imagen" src="../img/nosotros/person1.jpg" alt="">
-                    <h4 class="card__nosotros__h4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam similique nisi dolore amet, expedita eos error animi veritatis</h4>
+                    <h4 class="card__nosotros__h4">Marcos Lee</h4>
+                    <p class="card__nosotros__cargo">Director Ejecutivo </p>
                     <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
                         velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis dicta
                         rerum hic minima adipisci. Eius, saepe ad.</p>
@@ -65,17 +67,19 @@
             <div class="card__nosotros">
                 <div class="card__content">
                     <img class="card__nosotros__imagen" src="../img/nosotros/person2.jpg" alt="">
-                    <h4 class="card__nosotros__h4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam similique nisi dolore amet, expedita eos error animi veritatis</h4>
+                    <h4 class="card__nosotros__h4">Benjamin Roja</h4>
+                    <p class="card__nosotros__cargo">Director de Operaciones</p>
                     <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
                         velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis dicta
-                        rerum hic minima adipisci. Eius, saepe ad.</p>
+                        rerum hic minima adipisci</p>
                 </div>
 
             </div>
             <div class="card__nosotros">
                 <div class="card__content">
                     <img class="card__nosotros__imagen" src="../img/nosotros/person3.jpg" alt="">
-                    <h4 class="card__nosotros__h4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam similique nisi dolore amet, expedita eos error animi veritatis</h4>
+                    <h4 class="card__nosotros__h4">Dimitri Boog</h4>
+                    <p class="card__nosotros__cargo">Director Financiero</p>
                     <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
                             velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis dicta
                             rerum hic minima adipisci. Eius, saepe ad.</p>
@@ -85,7 +89,8 @@
             <div class="card__nosotros">
                 <div class="card__content">
                     <img class="card__nosotros__imagen" src="../img/nosotros/person4.jpg" alt="">
-                    <h4 class="card__nosotros__h4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam similique nisi dolore amet, expedita eos error animi veritatis</h4>
+                    <h4 class="card__nosotros__h4">Ema Sole</h4>
+                    <p class="card__nosotros__cargo">Directora de Marketing</p>
                     <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
                         velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis dicta
                         rerum hic minima adipisci. Eius, saepe ad.</p>
@@ -95,7 +100,8 @@
             <div class="card__nosotros">
                 <div class="card__content">
                     <img class="card__nosotros__imagen" src="../img/nosotros/person5.jpg" alt="">
-                    <h4 class="card__nosotros__h4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam similique nisi dolore amet, expedita eos error animi veritatis</h4>
+                    <h4 class="card__nosotros__h4">Lisa Moon</h4>
+                    <p class="card__nosotros__cargo">Director de Ventas</p>
                     <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
                         velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis dicta
                         rerum hic minima adipisci. Eius, saepe ad.</p>
@@ -105,7 +111,8 @@
             <div class="card__nosotros">
                 <div class="card__content">
                     <img class="card__nosotros__imagen" src="../img/nosotros/person6.jpg" alt="">
-                    <h4 class="card__nosotros__h4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam similique nisi dolore amet, expedita eos error animi veritatis</h4>
+                    <h4 class="card__nosotros__h4">Sophia Jhonson</h4>
+                    <p class="card__nosotros__cargo">Recursos Humanos</p>
                     <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
                         velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis dicta
                         rerum hic minima adipisci. Eius, saepe ad.</p>
@@ -129,7 +136,7 @@
 
 
     <!--Scripts Bootstrap-->
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
