--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ h3 {
 
 }
 
+h4 {
+    font-size: 25px !important;
+}
+
 .inicio p {
     font-weight: 600;
     color: #535461;
@@ -49,6 +53,14 @@ nav {
     background-color: #da291c !important;
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
+}
+
+nav i {
+    color: white;
+}
+
+.navbar-shadow {
+    box-shadow: 4px 4px 14px -6px rgba(0, 0, 0, 0.322);
 }
 
 .navbar-logo {
@@ -120,10 +132,6 @@ footer {
 }
 
 
-.banner h1 {
-    padding-block: 1rem;
-}
-
 .main-texto {
     display: flex;
     align-items: center;
@@ -140,47 +148,8 @@ footer {
 }
 
 /*----------------------------------------------------------------------*/
-/*------------------------------ CONTACTO ------------------------------*/
-/*----------------------------------------------------------------------*/
-
-
-.centrar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.formulario {
-    padding: 30px 0px 30px 0px;
-
-}
-
-.form-style-contacto {
-    padding: 5px;
-    margin: 10px;
-    border-style: solid;
-    border-color: black;
-    border-radius: 3px;
-    width: 400px;
-    height: 40px;
-    font-size: 15px;
-    display: flex;
-
-}
-
-.form-style-textarea {
-    padding: 5px;
-    margin: 10px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: black;
-    border-radius: 3px;
-    width: 400px;
-    height: 90px;
-    font-size: 15px;
-    display: flex;
-
-}
+/*-------------------------------- AYUDA ------------------------------*/
+/*--------------------------------------------------------------------*/
 
 .boton-enviar {
     font-weight: 700;
@@ -198,37 +167,55 @@ footer {
 /*----------------------------- SERVICIOS -----------------------------*/
 /*--------------------------------------------------------------------*/
 
-
-.cards__servicios {
-    display: flex;
-    justify-content: center;
+.cards__servicios i {
+    font-size: 1.2rem;
+    color: #da291c;
 }
+
+
+.cards__servicios {}
 
 .card__servicios {
-    color: white;
+    color: #535461;
+    text-align: center;
+    font-weight: 600;
     width: 30%;
-    background-color: rgb(94, 94, 94);
-    padding: 15px;
+    background-color: #ffffff;
     border-radius: 7px;
     margin-inline: 10px;
+    padding: 0px !important;
+    border: solid;
+    border-color: #da291c;
+    box-shadow: 4px 4px 14px -6px rgba(0, 0, 0, 0.75);
 }
 
-.card__servicios__imagen {
-    width: 100%;
+.card_servicios::shadow {}
+
+.card_servicios p {
+
+    border: solid;
+    border-bottom: #da291c;
 }
+
 
 .card__servicios__titulo {
-    font-size: 18px
+    color: #fff;
+    padding: 1rem;
+    background-color: #da291c;
 }
 
-.card__servicios__parrafo {
-    font-size: 14px;
+.card__servicios__subtitulo {
+    text-align: center;
+    font-size: 20px;
 }
 
 .card__servicios__boton {
-    background-color: white;
+    color: white;
+    font-weight: 600;
+    background-color: #da291c;
     border: none;
     padding: 10px;
+    margin-bottom: 1rem;
     border-radius: 7px;
 }
 
@@ -242,24 +229,18 @@ footer {
 /*-------------------------------- LOGIN -------------------------------*/
 /*----------------------------------------------------------------------*/
 
-.login-box {
-    background-color: #b3b3b3;
-    height: 500px;
-    width: 350px;
-    margin: 20px;
-    border-radius: 5px;
+.login__logo {
+    display: block;
+    margin: auto;
+    padding-block: 4rem;
 }
 
-.form-style-login {
-    padding: 5px;
-    margin: 10px;
-    border-style: solid;
-    border-color: black;
-    border-radius: 3px;
-    width: 205px;
-    height: 40px;
-    font-size: 15px;
-    display: flex;
+.card__login {
+    color: #fff;
+    background-color: #da291c;
+    border-radius: 10px;
+    padding-bottom: 5rem;
+    box-shadow: 4px 4px 14px -6px rgba(0, 0, 0, 0.75);
 }
 
 /*----------------------------------------------------------------------*/
@@ -286,6 +267,7 @@ footer {
     grid-template-rows: auto auto;
     grid-template-areas:
         "image title title"
+        "image cargo cargo"
         "paragraph paragraph paragraph";
     grid-gap: 10px;
     padding: 10px;
@@ -305,14 +287,17 @@ footer {
     grid-area: paragraph;
 }
 
+.card__nosotros__cargo {
+    grid-area: cargo;
+}
 
-@media screen and (max-width: 991px){
+@media screen and (max-width: 991px) {
     .navbar-login {
         display: none;
     }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
     footer {
         display: flex;
         justify-content: space-between;
@@ -320,8 +305,35 @@ footer {
     }
 }
 
-@media  (max-width: 500px) {
+@media (max-width: 500px) {
     .btn-color {
         background-color: #242F73 !important;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .card__servicios {
+        margin-top: 20px !important;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cards__nosotros {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cards__nosotros {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .cards__nosotros {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     }
 }
